kubernetes/apps/tier-2-applications/synch/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: synch
  namespace: default
spec:
  selector:
    app.kubernetes.io/name: synch
  ports:
    - name: http
      port: 8787
      targetPort: http
