kubernetes/apps/tier-2-applications/synch/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: synch
  namespace: default
spec:
  hostnames:
    - synch.sulibot.com
  parentRefs:
    - name: gateway-internal
      namespace: network
      sectionName: sulibot-wildcard-https
  rules:
    - backendRefs:
        - name: synch
          port: 8787
      timeouts:
        request: 300s
        backendRequest: 300s
